[package]
name = "subway_map"
version = "0.1.0"
authors = ["Emily Crandall Fleischman <emilycf@mit.edu>"]
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.21", features = ["derive"] }
float_eq = "1.0.1"
itertools = "0.10.5"
regex-syntax = "0.6.28"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
svg = "0.12.1"
thiserror = "1.0.37"
