[package]
name = "subway_map"
version = "0.1.0"
authors = ["Emily Crandall Fleischman <emilycf@mit.edu>"]
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4", features = ["derive"] }
expr-parser = { git = "https://github.com/zyxw59/expr-parser", version = "0.1.0" }
float_eq = "1.0.1"
itertools = "0.12"
regex-syntax = "0.8"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
svg = "0.14"
thiserror = "1.0.56"
