[package]
name = "subway_map"
version = "0.1.0"
authors = ["Emily Crandall Fleischman <emilycf@mit.edu>"]
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5", features = ["derive"] }
expr-parser = { git = "https://github.com/zyxw59/expr-parser", version = "0.1.0", branch = "stepwise" }
float_eq = "1.0.1"
itertools = "0.13"
regex-syntax = "0.8"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
smol_str = { version = "0.2.2", features = ["serde"] }
svg = "0.17"
thiserror = "1.0.56"
